--- a/blog/2024/0603.md
+++ b/blog/2024/0603.md
@@ -9,6 +9,8 @@ month:
 tags:
   - 書籍感想
 thumbnail: "/assets/img/blog/202406_fang.jpg"
+description: "先だってmisskeyに投稿していた、山川夜高さんの文学フリマ東京38新刊『ファング』読書日記＆ネタバレ感想をブログ上でも公開します:)
+投稿時はmisskeyで公開することしか考えていなかったため文体がだいぶラフ＆同書を読了済みの方向けです。ゆるい気持ちでお読みください…笑。"
 ---
 
 先だってmisskeyに投稿していた、山川夜高さんの文学フリマ東京38新刊『<a href="https://libsy.net/blog/3780" target="_blank" rel="nofollow">ファング</a>』読書日記＆ネタバレ感想をブログ上でも公開します:)
