ブログ更新

--- a/blog/2024/0531.md
+++ b/blog/2024/0531.md
@@ -1,5 +1,5 @@
 ---
-title: 五月の活動報告
+title: 2024年5月の活動報告
 date: 2024-05-31
 permalink: "blog/20240531/"
 category:
@@ -18,13 +18,12 @@ thumbnail: "/assets/img/blog/commit_log_202405.png"
 過去に<a href="https://feelingskyblue.fanbox.cc/posts/1641500" target="blank" rel="nofollow">pixivFANBOXで上げていた進捗報告</a>みたいな感じで、主に樹木続編の執筆コミットログを公開してゆくつもりです。あとは読んだ本のメモとか。
 執筆中の内容については触れないものの、コミットメッセージから断片的に察せるものもゼロではないかもしれないので、気になる方は薄目で見てください🙏
 
-# 五月の振り返り
+### 五月の振り返り
 - ようやく個人サイト上にブログを作った
 - 文学フリマ東京38出店
 - 執筆は一進一退
 - 20年越しにペーパーマリオRPGリメイク版が発売されて狂った
 - ラテンアメリカ文学の波が来てた
-<br>
 
 今月は5/19に文学フリマがあり、5/23にペーパーマリオRPGリメイク版が発売されてしまったので、五月後半は執筆が滞りました……笑。
 Twitterで散々に騒ぎまくったとおり、わたしは2004年に発売したペーパーマリオRPG原作が大好きで……中学二年生のときに小説を書きはじめた切っ掛けなんですよ……
@@ -44,9 +43,8 @@ Twitterで散々に騒ぎまくったとおり、わたしは2004年に発売し
 
 先月まで幻想文学論やらゴシック文学やら読んでたのに振り幅がでかいな（『ドリアン・グレイの肖像』、面白かったです）
 
-# 樹木続編について
+### 樹木続編について
 <img src="/assets/img/blog/commit_log_202405.png" alt="5月のコミットログ" loading="lazy" width="800" class="">
-<br>
 
 <a href="https://feelingskyblue.fanbox.cc/posts/1641500" target="blank" rel="nofollow">樹木本編の進捗報告</a>でお馴染み、執筆コミットログです。
 小説をgit管理しながら書いてるので、こう、書いた日と書かなかった日が一目で分かりますね。5月前半と後半で明らかに密度が違う！笑
