--- a/blog/2024/0731.md
+++ b/blog/2024/0731.md
@@ -9,7 +9,7 @@ month:
 tags:
   - 進捗報告
   - 樹木続編
-thumbnail: "/assets/img/blog/202406_matome.jpeg"
+thumbnail: "/assets/img/blog/202407_greenhouse.jpeg"
 
 ---
 
@@ -33,7 +33,7 @@ thumbnail: "/assets/img/blog/202406_matome.jpeg"
 十年以上ぶりの再読でも、当時強く印象に残ったシーンはかなり覚えていました。ピエトロ・クレスピの悲惨とか、レメディオスの昇天とか。結末に至る荒廃と、押し寄せてくる熱帯の蟻も。
 次はガルシア＝マルケスの自叙伝か、『族長の秋』を読みたいです。
 
-ラテンアメリカ…というかカリブ海繋がりで『私が諸島である カリブ海思想入門』も併読していました。
+ラテンアメリカ…というかカリブ海繋がりで『<a href="http://www.kankanbou.com/books/jinbun/0601" target="_blank" rel="noopenner noreferrer">私が諸島である カリブ海思想入門</a>』も併読していました。
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">いま読んでるのはこれ。『私が諸島である カリブ海思想入門』　面白いです <a href="https://t.co/LQP9dHm65v">pic.twitter.com/LQP9dHm65v</a></p>&mdash; 風野 湊🌿 (@feelingskyblue) <a href="https://twitter.com/feelingskyblue/status/1810535165543981074?ref_src=twsrc%5Etfw">July 9, 2024</a></blockquote>
 
 シャモワゾーをちらっと読んだことあったかも…ぐらいの知識で手に取ったのですが、たいへん面白かったです。
@@ -58,11 +58,12 @@ thumbnail: "/assets/img/blog/202406_matome.jpeg"
 ほんとは樹木続編の参考になるかな〜という算段もあったのですが、植物園が舞台になる第一章はもう書き終わっていたのでした。ちょっと表現調整に活かせるくらいかな。
 
 ### 樹木続編の進捗
-<img src="/assets/img/blog/commit_log_202406.png" alt="7月のコミットログ" loading="lazy" width="800" class="">
+<img src="/assets/img/blog/commit_log_202407.png" alt="7月のコミットログ" loading="lazy" width="800" class="">
 今月の進捗でございます。極端〜〜！
 
 七月初週に第一章を書きあげられたのは良いものの、その後の第二章着手で難航している様子が見て取れます。
-今回もなんだかんだ、最初に書いた導入2500字くらいは全ボツにして、別視点で書き直しました。なんとか離陸できたのではないでしょうか。
+今回もなんだかんだ、最初に書いた導入は全ボツにして、別視点で書き直しました。なんとか離陸できたのではないでしょうか。
+ちなみにボツにしたバージョンでは、サーファー…というかサーフィンが趣味の人物がメインでした。書き直したことで脇役になったものの設定は引き継いでいます。人間の身体を使いこなすひとを書きたいなぁと思っていたのでした（脇道に逸れすぎた＆ちゃんと調べたら未経験で書ける気がしなくなったのでボツ）。
 
 樹木続編、おおよそ三部構成を検討しており、第一部は章ごとに視点人物が変わります。
 プロット練った私は「ナイスアイデアだぜ！！」と思っていた気がしますが、いざ書く私の方からすれば、章ごとに雰囲気や文体も変わってくるため遅筆に拍車が掛かり、涙目であります。もお〜〜。
@@ -70,7 +71,7 @@ thumbnail: "/assets/img/blog/202406_matome.jpeg"
 
 #### 真夜中の散歩に寄せて
 夜の散歩シーンを書こうとして「10代前半の子どもがひとりで気ままに真夜中の街をうろつくというのは、あまり無いのでは？」と途中で我に返りました。高校生ならともかく。
-というのも、私は10代前半のころ、たま〜に真夜中の屋外を散歩していたからなのですが……。田舎で周囲に田園しかないからこそ出来た所業でしたねこれは。
+というのも、私は10代半ばのころ、たま〜に真夜中の屋外を散歩していたからなのですが……。田舎で周囲に田園しかないからこそ出来た所業でしたねこれは。
 星を見るついでに自宅周辺をうろうろしたり、真っ暗な田んぼのざわめきをひたすら眺めたり、短い時間ながらも好き勝手してたっけなあ……。
-思えば、『樹木』で書いた、異界がふと静かに口を開けるような感覚は、この頃の記憶とすこしばかり繋がっているのかもしれません。
+思えば、『樹木』で書いた、異界がふと静かに口を開けるような感覚は、この頃の記憶とすこしばかり繋がっていたのかもしれません。
 
