--- a/blog/2024/0830.md
+++ b/blog/2024/0830.md
@@ -9,7 +9,8 @@ month:
 tags:
   - 書籍感想
 thumbnail: "/assets/img/blog/202408_lbd.jpg"
-description: ""
+description: "小町紗良さんの新刊、ガールズジャズバンドlittle black dressをめぐる『Diamonds Are a Girl's Best Friend』読了感想です🥁
+ネタバレ全開なので、まだ読み途中orこれから読みたいという方はお気をつけて！"
 ---
 
 表紙、良〜〜！！
