--- a/blog/2024/0916.md
+++ b/blog/2024/0916.md
@@ -14,7 +14,7 @@ tags:
 おかげさまで、今回で『彼らは唯の夢』は完売となりました。再版の予定はなく、これにて終売です。通販在庫は、本日時点で、架空ストア様へ委託している数冊のみが残っています。お求めの方はご利用くださいませ:)
 
 大阪出発前夜に無配ペーパーを作成しながら「今回は観光できると良いな〜」とか呑気に思ってたのですが、お腹が本調子でなかったこともあり、昨年に引き続きほぼ蜻蛉返りになってしまいました。せめて喫茶店のひとつくらい行きたかったぜ…笑。
-叶うなら今年中にまた足を運びたいです。国立民族学博物館の展示「」が気になるんだ…！
+叶うなら今年中にまた足を運びたいです。国立民族学博物館の展示「<a href="https://www.minpaku.ac.jp/ai1ec_event/51494" target="_blank" rel="noopenner noreferrer">吟遊詩人の世界</a>」が気になるんだ…！
 
 さてさて、遅まきながら、当日配布した無料ペーパーの内容を公開します。
 今回は『すべての樹木は光』続編の冒頭抜粋も併せて掲載しました。紙面文字数の都合で、冒頭500字ほどはカットし、文中表現も一部調整しています。
