--- a/blog/2024/0930.md
+++ b/blog/2024/0930.md
@@ -42,7 +42,7 @@ thumbnail: "/assets/img/blog/202409_asagao.jpeg"
 振り返ってみると、八月〜九月頭はメンタル面にもけっこうダメージが響いており、将来の暗い展望ばかりがひたすら脳内上映されるなどしていたのですが、お腹が安定してくるとそういうのほとんど無いんですよね。
 腸が先かメンタルが先かと考えるとなんだか笑えてきます。精神は身体に属するものであるなあ…というのをあらためて感じた一夏でした。
 
-おそらく今週後半からまたお腹は荒れる見込みです（PMS）。イヤ！！！（ちいかわ）
+なお、プロスタグランジンのせいでまた近々お腹は荒れる見込みです。イヤ！！！（ちいかわ）
 
 #### 海外旅行準備
 10月のヨーロッパ渡航を前に、今月はあれこれと準備に奔走しました。任意摂取でコロナワクチン打ったりとか。高いよお！
