ブログ更新

--- a/blog/2024/1207.md
+++ b/blog/2024/1207.md
@@ -14,7 +14,7 @@ tags:
 初のビッグサイト開催でドキドキでしたが、おかげさまで楽しく参加することができました。出店者側でビッグサイトに参加したのは2015年のコミティア以来です。
 
 新刊の個人誌『[walking post card vol.11](/book/postcard_11/)』は、文フリと通販とで25部を売り上げ、残6部となりました。
-12/25頃に、本書の売上額はすべて<a href="https://www.unrwa.org/japan" target="_blank" rel="noopenner noreferrer">UNRWA</a>（国連パレスチナ難民救済事業機関）および<a href="https://www.unhcr.org/jp/" target="_blank" rel="noopenner noreferrer">UNHCR</a>（国連難民高等弁務官事務所）へ寄付予定です。通販でBOOST頂いた皆さまもありがとうございます…！
+12/25頃に、本書の売上額はすべてUNRWA（国連パレスチナ難民救済事業機関）およびUNHCR（国連難民高等弁務官事務所）へ寄付予定です。通販でBOOST頂いた皆さまもありがとうございます…！
 無事に寄付できたらまたブログでご報告しますね。
 
 個人誌の通販はBOOTHでのみ対応しています。お求めの方はこちらからぜひ。
