--- a/blog/2024/1230.md
+++ b/blog/2024/1230.md
@@ -8,6 +8,7 @@ month:
   - 2024年12月
 tags:
   - 創作TALK
+description: "あっという間に2024年も終わり…！毎年恒例、創作TALKさんの #創作2024_25 ハッシュタグ企画に参加する形で一年をざっくり振り返ってみます。今年は自サイト上にブログを実装したこともありゆったり記事が書けますね:)"
 ---
 
 あっという間に2024年も終わり…！
@@ -46,7 +47,7 @@ tags:
 - 散文：ヨーロッパ旅行記（walking postcard vol.11で公開）
 
 今年は樹木続編の執筆がようやく軌道に乗った一年でした。嬉し〜！！ここまで何万字をボツにしたことやら……現時点で全体の三分の一くらいでしょうか。
-友人である山川夜高さんのDiscordサーバーに小説のGitHubリポジトリを接続させてもらい、執筆ログを目に見える形にできたのもモチベ管理的にグッドでしたね（<a href="https://libsy.net/blog/4133" target="_blank" rel="noopenner noreferrer">こちらの記事</a>で詳しく開設されています）。
+友人である山川夜高さんのDiscordサーバーに小説のGitHubリポジトリを接続させてもらい、執筆ログを目に見える形にできたのもモチベ管理的にグッドでしたね（<a href="https://libsy.net/blog/4133" target="_blank" rel="noopenner noreferrer">こちらの記事</a>で詳しく解説されています）。
 タイトル案もようやく決定したので、このままの勢いで書き進めたいです:)
 ヨーロッパ旅行後に新刊『[walking postcard vol.11](/book/postcard_11.html)』を作れたのも良かったな〜〜
 
