--- a/blog/2024/1231.md
+++ b/blog/2024/1231.md
@@ -10,7 +10,8 @@ tags:
   - 進捗報告
   - 樹木続編
 thumbnail: "/assets/img/blog/202412_osaka.jpeg"
-
+description: "12月の活動報告です。今月はブログいっぱい書いてるなあ！
+文学フリマ東京参加にはじまり、突発で大阪遠征したり、忘年会にあちこち顔を出したりして、盛りだくさんな一ヶ月でしたね。樹木続編の3章が一気に進んだのも嬉しい！"
 ---
 
 12月の活動報告です。今月はブログいっぱい書いてるなあ！
