コミット漏れ追加

--- a/blog/2025/0430.md
+++ b/blog/2025/0430.md
@@ -109,7 +109,7 @@ GWを控えた春の週末に、目黒の<a href="https://ins.kahaku.go.jp/" tar
 4月中旬ごろかな、唐突にSCPブームが自分の中で再燃し、調子の悪い日とかは一日ずっとベッドに転がってひたすらSCP記事を読んでました。
 taleも含めて読み出すとマジで底なし沼ですね。「<a href="http://scp-jp.wikidot.com/scp-1710-jp" target="_blank" rel="noopenner noreferrer">1998年、初夏</a>」とか。ハチャメチャで面白いうえに小説がうまい……
 今日の時点ではもうブームが落ち着いてるので瞬間的な強風だったようです。謎。
-※SCP：都市伝説めいた怪奇創作コミュニティサイト。SCP…知らん…って人は<a href="https://ja.wikipedia.org/wiki/SCP%E8%B2%A1%E5%9B%A3" target="_blank" rel="noopenner noreferrer">wikipedia</a>か<a href="https://w.atwiki.jp/aniwotawiki/pages/28674.html" target="_blank" rel="noopenner noreferrer">アニヲタwiki</a>をチェックしてから<a href="http://scp-jp.wikidot.com/" target="_blank" rel="noopenner noreferrer">本家サイト</a>に行くと良いかと思います
+※SCP：都市伝説めいた怪奇創作のコミュニティサイト。SCP…知らん…って人は<a href="https://ja.wikipedia.org/wiki/SCP%E8%B2%A1%E5%9B%A3" target="_blank" rel="noopenner noreferrer">wikipedia</a>か<a href="https://w.atwiki.jp/aniwotawiki/pages/28674.html" target="_blank" rel="noopenner noreferrer">アニヲタwiki</a>をチェックしてから<a href="http://scp-jp.wikidot.com/" target="_blank" rel="noopenner noreferrer">本家サイト</a>に行くと良いかと思います
 
 ####  Nintendo Switch2落選！
 駄目だったよォ！！！！
