--- a/blog/2025/0430.md
+++ b/blog/2025/0430.md
@@ -36,8 +36,7 @@ description: "もうとっくに四月じゃないかって？活動報告を上
 3月のTAMAコミで頒布した『本を片手に植物園』も持参予定です。
 ビッグサイトはなかなか遠いので、お気軽に…とは言い難いのですが、当日お会いできる方はどうぞ良しなに！
 
-<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">5/11(日)東京ビッグサイト開催の <a href="https://twitter.com/hashtag/%E6%96%87%E5%AD%A6%E3%83%95%E3%83%AA%E3%83%9E%E6%9D%B1%E4%BA%AC?src=hash&amp;ref_src=twsrc%5Etfw">#文学フリマ東京</a> 、ブース位置発表されましたね！<br>呼吸書房は南1-2ホールのB-81配置となりました🕊️<br>お品書きはまた日が近づいてきてから改めて。<br>3月新刊の植物園エッセイ＆ガイドと既刊各種持ってゆきます、よろしくお願いします〜！ <a href="https://t.co/NtsMK07qAx">pic.twitter.com/NtsMK07qAx</a></p>&mdash; 風野 湊🌿 (@feelingskyblue) <a href="https://twitter.com/feelingskyblue/status/1911404574956478776?ref_src=twsrc%5Etfw">April 13, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-※お品書きツイートはまた追って差し替えます
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">【告知】5/11(日) <a href="https://twitter.com/hashtag/%E6%96%87%E5%AD%A6%E3%83%95%E3%83%AA%E3%83%9E%E6%9D%B1%E4%BA%AC?src=hash&amp;ref_src=twsrc%5Etfw">#文学フリマ東京</a> 出店します！<br>3月新刊の『本を片手に植物園 vol.1 Tokyo』は文フリ初頒布です:)<br><br>📍東京ビッグサイト南1・2ホール「B-81」<br>📚Webカタログ：<a href="https://t.co/XjxXXnzFQM">https://t.co/XjxXXnzFQM</a><br>🌿個人サイト（既刊詳細・通販・試読）：<a href="https://t.co/pSx4m0MdLJ">https://t.co/pSx4m0MdLJ</a> <br><br>↓情報はスレッドに繋げます <a href="https://t.co/Y6hahvx3hD">pic.twitter.com/Y6hahvx3hD</a></p>&mdash; 風野 湊🌿 (@feelingskyblue) <a href="https://twitter.com/feelingskyblue/status/1918671416284643418?ref_src=twsrc%5Etfw">May 3, 2025</a></blockquote>
 
 それと、今回から『すべての樹木は光』は増刷に伴い価格を変更します。
 現時点の第二版在庫（あと3冊）は価格据え置きでBOOTHに出しているので、旧版でも安い方が良いなァという方は通販もご検討くださいませ。
