--- a/blog/2025/0630.md
+++ b/blog/2025/0630.md
@@ -83,7 +83,7 @@ description: ""
 というか昆虫館って子供のころから含めても訪れたの初めて？かも？
 ケージにびっしり貼り付いたトノサマバッタ数十匹がド迫力でした（孤立時と密集時で成虫の色が変わります〜的な展示だった）。ちょうどホタルの成虫展示時期だったのもラッキーでしたね。樹木続編のホタル描写を補強したいなと思っていたんじゃ…。
 
-#### 二十年ぶりのホタルを見に行く
+#### 三十年ぶりのホタルを見に行く
 いやでもやっぱ展示だけだと物足りねえな…ということで実物も見に行きました。ちょうど6月、今しかねえ！
 東京近郊でどっか見れるところは…と探したら、いろいろあるんですね。あまり山奥だと（運転免許がないと）辿り着けないので、駅からのバス路線がある高尾の[夕焼け小焼けふれあいの里](https://www.yuyakekoyake.jp/)へ、突発的に2回ほど足を運んできました。
 敷地内の小川や、付近を流れる北浅川沿いに、ゲンジボタルとヘイケボタルがそれぞれ異なる光を灯して舞う様子、実に良かったです…。
@@ -91,9 +91,9 @@ description: ""
 外灯のほぼ無い真っ暗な舗装路を歩く、という体験も楽しかったですね。2回目の訪問では[山川夜高さん](https://libsy.net/)が同行してくれたので、互いの夜目がどれくらい効いてるかな〜とかお喋りしてました。
 国内だとなかなか……いや車道でもあるところにはあるんだろうけど、徒歩で安全に辿りつける視界すべて外灯ゼロの真っ暗な道は…少ない！！　地元の道は、もちろん都市部の道に比べれば相当に暗かったですが、それでも数十メートル置きにぽつりぽつりと外灯はありましたし。バスの都合であまり長居できなかったことだけが心残りです。ホタルだけでなく星もゆっくり眺めたかったなぁ。
 
-2023年のオーストラリア熱帯雨林旅行ではホタルを見た記憶がないので、飛び回っているホタルを見たのは二十年ぶりくらいのことでした。
-小学一年生くらいの頃だったか、自宅前の水田に一匹だけいたホタルを父が捕ってきてリビングに離してくれたんですよね。
-二十年経っても覚えているくらいには思い出深い記憶ですが、それきり地元でホタルを見ることはなくなってしまったので、最後の個体群に申し訳ないことしてしまったな…。
+2023年のオーストラリア熱帯雨林旅行ではホタルを見た記憶がないので、飛び回っているホタルを見たのは三十年ぶりくらいのことでした。
+小学一年生になるかならないかの頃、自宅前の水田に一匹だけいたホタルを父が捕ってきてリビングに離してくれたんですよね。
+今でも覚えているくらいには思い出深い記憶ですが、それきり地元でホタルを見ることはなくなってしまったので、最後の個体群に申し訳ないことしてしまったな…。
 
 #### リュートの朗読公演、「『ロバのおうじ』をめぐる旅」へ
 当初は本記事内に書いていたんですが、あまりに長くなりすぎたため、分けました笑。
