--- a/blog/2025/0731.md
+++ b/blog/2025/0731.md
@@ -84,7 +84,7 @@ description: ""
 
 #### WWFジャパンへの寄付を始めたよ
 スーパーやコンビニが鰻祭りになる夏のひととき、鰻をただ買わないだけというのも飽きてしまったので、今年から寄付をはじめました。
-最初は[水産研究教育機構](https://www.fra.go.jp/)宛が良いかなと思ったんですが、個人寄付にも申込書がいるらしく、ちょっとハードルが高くて残念。
+最初は[水産研究教育機構](https://www.fra.go.jp/)宛が良いかなと思ったんですが、個人寄付にも申込書がいるらしく、ちょっとハードルが高くて断念。
 いろいろ調べて、寄付先は[WWFジャパン](https://www.wwf.or.jp/)にしました。水産資源に限定されないかたちですが、熱帯雨林にも何かわずかでも返してゆけたら良いなぁ、とこの機会に。会報誌とちょっとしたオマケが届くらしく、楽しみです:)
 
 #### 参院選選挙お疲れさまでした
