--- a/blog/2025/0915.md
+++ b/blog/2025/0915.md
@@ -7,7 +7,7 @@ category:
 month:
   - 2025年9月
 thumbnail: "/assets/img/blog/202509_sup.jpg"
-description: ""
+description: "先日の記事でも書いたとおり、今年からSUP（スタンドアップパドルボード）にどハマりしました。今夏だけで三カ所ほど足を運んでみたところ、主催するお店によって雰囲気や体験がまったく違ったので、簡単なレビューを残してみます:) SUP気になってるけど何処が良いのかな〜という方の一助になれば幸いです。"
 ---
 
 [先日の記事](/blog/20250831/)でも書いたとおり、今年から[SUP（スタンドアップパドルボード）]((https://www.asoview.com/note/4709/))にどハマりしました。
