--- a/blog/2025/1121.md
+++ b/blog/2025/1121.md
@@ -27,7 +27,9 @@ thumbnail: "/assets/img/blog/202511_green.jpg"
 
 呼吸書房は、東京ビッグサイト南3・4ホール「う-50」配置です。[Webカタログはこちら](https://c.bunfree.net/e/g2U)！
 
-<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">【 <a href="https://twitter.com/hashtag/%E6%96%87%E5%AD%A6%E3%83%95%E3%83%AA%E3%83%9E%E6%9D%B1%E4%BA%AC?src=hash&amp;ref_src=twsrc%5Etfw">#文学フリマ東京</a> 新刊】<br>『walking postcard vol.12』72P ¥500<br><br>『すべての樹木は光』続編となる『すべての木陰に歌を』より第一部の37000字を先行掲載します。樹木に変えられて127年後、遠い未来で魔法が解けたユハの物語です。<br><br>詳細📚 <a href="https://t.co/5tLiZaWWUc">https://t.co/5tLiZaWWUc</a><br>通販🛒 <a href="https://t.co/5ePS0xKT22">https://t.co/5ePS0xKT22</a> <a href="https://t.co/EtfNvqHV4R">pic.twitter.com/EtfNvqHV4R</a></p>&mdash; 風野 湊🌿11/23文学フリマ東京う-50 (@feelingskyblue) <a href="https://twitter.com/feelingskyblue/status/1990393776846553134?ref_src=twsrc%5Etfw">November 17, 2025</a></blockquote>
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">【 <a href="https://twitter.com/hashtag/%E6%96%87%E5%AD%A6%E3%83%95%E3%83%AA%E3%83%9E%E6%9D%B1%E4%BA%AC?src=hash&amp;ref_src=twsrc%5Etfw">#文学フリマ東京</a> 新刊】<br>『walking postcard vol.12』72P ¥600<br><br>『すべての樹木は光』続編となる『すべての木陰に歌を』より第一部の37000字を先行掲載します。樹木に変えられて127年後、遠い未来で魔法が解けたユハの物語です。<br><br>詳細📚 <a href="https://t.co/5tLiZaWWUc">https://t.co/5tLiZaWWUc</a><br>通販🛒 <a href="https://t.co/5ePS0xKT22">https://t.co/5ePS0xKT22</a> <a href="https://t.co/EtfNvqHV4R">pic.twitter.com/EtfNvqHV4R</a></p>&mdash; 風野 湊🌿11/23文学フリマ東京う-50 (@feelingskyblue) <a href="https://twitter.com/feelingskyblue/status/1990393776846553134?ref_src=twsrc%5Etfw">November 17, 2025</a></blockquote>
+
+<strong>追記：</strong>すみません、上記ツイート内の『walking postcard vol.12』価格表記おもいきりミスっており「600円」が正です…！BOOTH・Webカタログ・お品書き上の価格表記をご参照ください🙏
 
 ビッグサイトって会場までのアクセスが大変なので、お気軽にお立ち寄りくださいとはなかなか言えないのですが、文学フリマへお越しの際には、弊サークルもよろしくお願いします:)
 遠方の方は[BOOTH通販](https://kokyushobo.booth.pm/)や[架空ストア委託](https://store.retro-biz.com/list_o510.html)もぜひご利用ください。
