--- a/blog/2025/1228.md
+++ b/blog/2025/1228.md
@@ -6,7 +6,7 @@ category:
   - 雑記
 month:
   - 2025年12月
-description: ""
+description: "先日、At Sea Dayさんからのご依頼で寄稿した、掌編「クリスマスを奏でた後に」。せっかくの年末年始なので、記憶が鮮明なうちに、こちらの小説のメイキング……というか執筆過程を書き残しておこうと思います。小説の書き方は人によって千差万別ですが、私の場合はこうだよ〜ということで、年末年始のお茶請けがわりにどうぞ:)"
 ---
 
 先日、[At Sea Day](https://atsea.day/)さんからのご依頼で寄稿した、掌編「[クリスマスを奏でた後に](https://atsea.day/blogs/journal/novel_06)」。
