--- a/blog/2026/0131.md
+++ b/blog/2026/0131.md
@@ -1,5 +1,5 @@
 ---
-title: 2026年1月の活動報告（ちょっと待っててね）
+title: 2026年1月の活動報告（2/7更新）
 date: 2026-01-31
 permalink: "blog/20260131/"
 category:
@@ -9,9 +9,128 @@ month:
 tags:
   - 進捗報告
   - 樹木続編
-thumbnail: ""
+thumbnail: "/assets/img/blog/202601_kyoto.jpg"
 description: ""
 ---
 
-樹木続編の執筆が佳境なため、1月の活動報告はちょっとお待ちください🙏
-シーンが一区切りしたら改めて更新しに来ます！
+1月の活動報告、一週間の遅刻で更新です、お待たせしました！
+1月最終週は樹木続編執筆にのめり込んでおり、ウオオオこのまま一気にゴールや！！！と鼻息荒くしていたところ再び壁に激突し、顔を覆ってうずくまってるのが今です。なう。流石にラストまで全力疾走はできなかったか。また平常のペースで書いてゆきます。
+サムネイルは京都で訪れた河井寛次郎記念館です。
+
+### 1月の振り返り
+- 文学フリマ京都10ありがとうございました！
+- 京都旅行の思い出
+- その他ゆるい雑談
+
+#### 文学フリマ京都10の御礼
+遅ればせながら、1/18の文学フリマ京都10、当日お越しくださった皆様、TL越しに見守ってくださった皆様、ありがとうございました！:)
+二年ぶりの参加となった文学フリマ京都、規模がとても大きくなっていてびっくりしました。みやこめっせ一階＆三階での2フロア開催！　一人参加だったこともあって今回は三階に辿りつけずでした…。
+
+<blockquote class="bluesky-embed" data-bluesky-uri="at://did:plc:qbxxhhl3rvgnzptnl6cpwocz/app.bsky.feed.post/3mco55hln4224" data-bluesky-cid="bafyreifxlqnpvixejkeuzmy4mle5yxwxqka45qrzxmsl5kiq7qtqmjdiry" data-bluesky-embed-color-mode="system"><p lang="ja">設営整いました！
+呼吸書房、みやこめっせ一階B-21にてお待ちしております🙌 #文学フリマ京都<br><br><a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz/post/3mco55hln4224?ref_src=embed">[image or embed]</a></p>&mdash; 風野 湊🦋 (<a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz?ref_src=embed">@feelingskyblue.bsky.social</a>) <a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz/post/3mco55hln4224?ref_src=embed">2026年1月18日 12:00</a></blockquote>
+
+とはいえ東京よりは緩やかな雰囲気があり、立ち読みしてくださる方が多くて嬉しかったです。お買いものもちょっとできたし！
+やっぱりこれからも東京以外の文学フリマにも継続して参加していきたいなァと思いました。ひとまず次回のイベント参加は5月の文学フリマ東京予定ですが…！
+
+##### 『青と茜と砂漠の国』が完売しました
+文学フリマ京都後の通販にて、モロッコ紀行文『青と茜と砂漠の国』が完売しました。お迎え頂きありがとうございました！
+（2026/2/7時点で、[架空ストアさんへの委託分](https://store.retro-biz.com/i12258.html)が1冊のみ残っています）
+
+現在、新仕様で作り直している『旅人よ立ち止まれ』と同様、本書もいずれは新しい仕様に変更して再度刊行する予定です。旅人本の後になるので、2026年後半か2027年以降かな…。
+
+#### 京都旅行の思い出
+文学フリマ京都参加に併せて観光も楽しみました。ちょうど寒波が来る前の暖かいタイミングで助かった…！　二年前は寒さで終始ガタガタ震えていた記憶があるのですが、今回は日中ならマフラーなしでも大丈夫なくらいでした。
+
+##### 河井寛次郎記念館を訪ねる
+文フリ京都出店者の[山川夜高さん](https://libsy.net/)と、共通の友人である[氷屋さん](https://misskey.design/@kooriya_ab)が土曜は京都観光の予定と聞いていたので、「わたしも後からのんびり合流して良いですか？」とお尋ねしたところ「早く来たら猫が見れますよ」とのお返事を頂きました。**エ！！？**
+
+という訳で、土曜日は[河井寛次郎記念館](http://www.kanjiro.jp/)を訪れました。私が合流した時点でお二人とも既にだいぶ見学終えてたのに待っててくれてありがとう…。
+
+<blockquote class="bluesky-embed" data-bluesky-uri="at://did:plc:qbxxhhl3rvgnzptnl6cpwocz/app.bsky.feed.post/3mcmnbftmws2w" data-bluesky-cid="bafyreiapd2twg746melwoicfx7dicaqqjrcojsvwfvi7e4j5hpvz7523ny" data-bluesky-embed-color-mode="system"><p lang="ja">京都に来ています:) 明日が文フリ本番なのに既に体力を使い過ぎている！
+写真は河井寛次郎記念館と、全然上手く撮れなかった看板猫のえきちゃん🐈<br><br><a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz/post/3mcmnbftmws2w?ref_src=embed">[image or embed]</a></p>&mdash; 風野 湊🦋 (<a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz?ref_src=embed">@feelingskyblue.bsky.social</a>) <a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz/post/3mcmnbftmws2w?ref_src=embed">2026年1月17日 21:43</a></blockquote>
+
+午後二時半くらいだったかな、冬の日差しが既に夕暮れを帯び始めていて、記念館の家屋内には長く日差しが伸びていました。
+当日まで（看板猫さんがいるということ以外）マジで何も知らずに行った不真面目な見学者だったのですが、室内履きでぺたぺた歩きながら、生活と地続きにある家具や調度品、陶器、木彫を眺めるのはとても楽しい体験でした。
+
+庭にある登り窯もデカくてすごい迫力だったなあ……直接見たの初めてじゃないかしら。ああいう焼き物の窯はなんとなく人家から離れた場所にあるイメージだったのですが（たぶん『ぼくのなつやすみ』の印象だと思う）、民家のすぐ傍にあれだけ大きな窯があるとは、たぶん焼成のときは何日も火を入れ続けるんだろうに、すごいことだなあ、と窯を見上げながら思うなどしました。
+
+文フリから帰ってようやく河井寛次郎や民藝運動についてちょっと調べ、東京の駒場に日本民藝館があることも知ったので、近いうちに訪れてみようかな。
+[山川さんの京都観光記事](https://libsy.net/blog/4725)でも詳しく筆が割かれているので、併せてぜひ。
+
+その日は他にも楽器屋さんや甘味処に足を運んだのですが、遊びすぎたせいか夕食あたりで体力を使い果たし、あげく腹も壊して、解散後はよろめきながら宿まで帰りました。丈夫な人間になりてえ。
+
+##### ギラギラ植物園
+翌日曜日は朝から夜までスケジュールぎっしりでした。開場前に会場近所の平安神宮庭園を散歩し、文フリを終え、アフターのお喋りも終え……まだこれで終わりではない。宿に帰る前にバスへ飛び乗り、[京都府立植物園](https://www.kyotobotanicalgardens.jp/)へ向かいます。
+なんと営業時間終了後に、期間限定で[観覧温室のライトアップショー](lightcycles-kyoto.com)が行われているとのこと。これは行くしかあるまい……
+
+えっ！？ 通常入園料500円なのにライトアップショー入場料は2700円！！？？
+※ライトアップショー運営は京都府立植物園とは別団体
+
+<blockquote class="bluesky-embed" data-bluesky-uri="at://did:plc:qbxxhhl3rvgnzptnl6cpwocz/app.bsky.feed.post/3mcpcre35ek2j" data-bluesky-cid="bafyreihxknc6zp2oscyrfwh56azo5eovmkjoh4roabwibgklm2t55mjdzq" data-bluesky-embed-color-mode="system"><p lang="ja">文フリアフター後、京都府立植物園の観覧温室ライトアップに行ってきました🌴
+音と光のインスタレーションとのことで（ビジュアル特化のエレクトリカルパレード空間なのかしら…）と思ってたんですが笑、かなり新鮮な鑑賞体験で楽しかったです！
+
+特に良かったのは前半の木漏れ日テーマエリア。
+植物たち本来の色や特徴は観察できない代わりに、形状やシルエットが前面に浮かびあがる…規則的なレーザー光が葉や幹に触れてランダムな形質に変化するさまに、木漏れ日の心地良さの理由を垣間見たように思いました。ヤシの葉影の美しさ…
+
+近視なので、ときどき眼鏡をはずして光のぼやけた空間も味わいました。ちょっと蛍みたいで楽しかった…<br><br><a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz/post/3mcpcre35ek2j?ref_src=embed">[image or embed]</a></p>&mdash; 風野 湊🦋 (<a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz?ref_src=embed">@feelingskyblue.bsky.social</a>) <a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz/post/3mcpcre35ek2j?ref_src=embed">2026年1月18日 23:13</a></blockquote>
+
+植物園とは…資本主義とは……いやでも実際に見てからだな……とじゃっかん斜に構えてたのですが、行って良かったです。<small>（後半のテーマエリアはちょっと趣味に合わなかったけど）</small>
+
+##### 色んな方とお会いしました
+イベントにかこつけて、普段お話する機会がなかなか無い方ともお喋りを楽しみました:)
+Twitterで創作企画「[#novel首塚](https://x.com/bean_radish/status/1969340761746415762)」を主催されている[深夜さん](https://x.com/bean_radish)とお会いしたり……。
+（深夜さんには過去に『すべての樹木は光』をオマージュした小説を[『首の夢』の一編](https://kakuyomu.jp/works/16817330666164694446/episodes/16817330666367537537)として寄せていただいております🌵）
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">風野湊さん(<a href="https://twitter.com/feelingskyblue?ref_src=twsrc%5Etfw">@feelingskyblue</a>)<br>『すべての樹木は光』<br><br>樹木変身譚を得意とする風野さんの幻想小説を受け、自分が同じ題材をとるとしたらどのようにという観点でこの話を考えました。『すべての～』で市場に降るスコールの場面が印象的で、どうにかあの雨を浴びたかったのです。<br><br>4「温室」 <a href="https://t.co/n4Ag8SO2Qe">pic.twitter.com/n4Ag8SO2Qe</a></p>&mdash; 深夜 (@bean_radish) <a href="https://twitter.com/bean_radish/status/1831691955379826938?ref_src=twsrc%5Etfw">September 5, 2024</a></blockquote>
+
+イベント翌日は、植物との関わりからコミュニケーションを思索するZINE『[フィトフィリア；α](https://hesperas.booth.pm/items/5365722)』など、人文系の評論やエッセイを書いていらっしゃる[田原夕さん](https://dismal-dusk.hatenablog.com/)にお声がけいただき、小説・漫画・ゲームにおけるファンタジーと魔法についてカフェで盛り上がったりしました（今後「ゼロ年代の魔法」をテーマにした評論を刊行予定とのこと）。
+
+日頃は人と話すの尻込みしがちな自分としてはかなり頑張った気がする！2026年！
+
+#### その他ゆるい雑談
+##### 『うみねこのなく頃に』との再会
+深夜さんのプレイ感想ツイートをきっかけに『うみねこのなく頃に咲』を購入したのも今月ですね。
+私が最後にうみねこ（オリジナルのWindowsノベルゲーム版）をプレイしたのは2010年頃で、じつに15年以上ぶりの再会です。漫画版EP8も追いかけていたので、物語としてそんなに離れていた実感はないのですが。
+EP1（2007年初出）序盤時点でもゼロ年代の独特なノリやスラングが結構あり、うおお時代性が…時代性が打ち寄せてくる…！と震えております。懐かしすぎる。
+樹木続編の執筆もあるので、空いた時間にちょっとずつ読んでいきたいですね。
+私がときどき書く「幻想を（幻と知ってなお）信じること」というテーマは『うみねこ』から手渡されたものであるなあ、と振り返ってしみじみ思います。
+
+##### かぎ針編みを始めました
+ひっそり夏頃から言ってたんですよね、編み物への興味。
+季節的には毛糸でマフラーなんか編んだ方が良いんでしょうけど、実際に作りたいのが麻紐のかごやネットなので、麻紐でコースターを練習しています。
+<blockquote class="bluesky-embed" data-bluesky-uri="at://did:plc:qbxxhhl3rvgnzptnl6cpwocz/app.bsky.feed.post/3mc5673q73c2m" data-bluesky-cid="bafyreigybghyqwz6pkoycly6bbqpkfyafkenwogyyzjwb4r3lvnl6iydhq" data-bluesky-embed-color-mode="system"><p lang="ja">かぎ針編み（おそらく20年ぶり…？？）一年生、ガッタガタの麻紐コースターを錬成🧶
+編み目途中で数えるの訳わかんなくなるんだけど皆どうやってるんだ_(:3 」∠)_
+編みもの一時間で肩こりバキバキになったわよ<br><br><a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz/post/3mc5673q73c2m?ref_src=embed">[image or embed]</a></p>&mdash; 風野 湊🦋 (<a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz?ref_src=embed">@feelingskyblue.bsky.social</a>) <a href="https://bsky.app/profile/did:plc:qbxxhhl3rvgnzptnl6cpwocz/post/3mc5673q73c2m?ref_src=embed">2026年1月11日 18:04</a></blockquote>
+
+手芸用麻紐じゃないから実際編みづらいよ！笑
+ひとまずは毛糸で練習した方が良いんじゃないか、ということで昨日、毛糸玉を買ってきたところです。計画性のNASA。
+
+##### 選挙とその後の日々と
+これを書いている今、2月7日深夜です。衆院選明日ですね…！
+自分は平日に期日前投票へ行ってきました。寒波が襲来しているなか、投票所へ行くだけでも大変な方も多くいるかと思います、どうか皆さまご安全に。
+
+たしか前にもブログで紹介しましたが、自分は小選挙区の投票先を選ぶ際には三春充希さんの[情勢報道集約](https://note.com/miraisyakai/n/n7089ac704a58)を参照しています。選挙区ごとの接戦具合だけでなく、報道各社でどれくらいバラつきがあるか（不確定要素が多いか）などをデータとして見られるのでありがたい。
+
+選挙の時期はSNSに（日頃以上に）言葉が飛び交うので、疲弊している方もいらっしゃると思います。どちらを見ても、より強い言葉がインプレッションを獲得して、選挙が終わった後にも苦い残響として長く尾を引く（これはSNSや動画サイトの収益構造が本当に悪いのですが…）。
+私自身はリベラル寄りの政策に賛成しており、同様の意見がTLにも多いですが、そうではない友人もいるし、好きなゲームの感想を見に行った掲示板では私に近しい価値観が馬鹿馬鹿しいと一蹴されていたりもする。どんな言葉も同じ価値観を共有する人々の間でしか響かないのだろうか、と暗い気持ちを覚えることもあります。
+
+社会も時流もあちこちで問題が噴出するなか、個人にできることがあまりにささやかでも、身近にある断絶に細い蜘蛛の糸を掛けようとするくらいは諦めずにいたいものです。それぞれのやり方で。
+ひとまず私は、Aに（賛同する/賛同しない）目の前の他者は愚かである、と囁きかける言葉を拒むところから始めます。
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LUch7N9Gw28?si=ruGtkFgFJ1pJTJHW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+ピノキオピーの、社会風刺をユーモアと優しさで包んでみせる手腕はマジで凄いなぁと思う昨今。「[T氏の話を信じるな](https://www.youtube.com/watch?v=Jtm6ikBIl0g)」とかもね…。
+
+### 樹木続編の進捗
+<img src="/assets/img/blog/commit_log_202601.png" alt="1月のコミットログ" loading="lazy" width="800" class="">
+
+ログが長〜い！ 文フリ京都があったわりに執筆頑張ったね…。
+終盤に差し掛かり、迷走したり躓いたりしつつも、頑張っています。ネタバレ配慮するともう「頑張ってます」しか言えなくなってきた。
+2月…か3月…には結末まで辿り着くとして、そこから推敲（書きながら推敲もしてる派なのでそれほど時間は掛からないと思うけど）と考えると、5月文フリで…出るか…？？　夏以降なのか…？？？
+
+ともあれ、ユハの物語がほんとにもう終わるのかもしれない、と思うと、感慨深いです。
+準備期間も含めると2017年頃…より前？から書いているので、かれこれ10年くらい彼女の物語に立ち会っていることになります。
+どんな物語も完璧に書き終えられるなんてことはなく、なんらかの取りこぼしは必ず発生します。そして完璧ではないからこそ、そこから次の物語が生まれてくる（『すべての樹木は光』は、前作『竜の花嫁』で書けなかった事柄へのアンサーです）。
+今はまだ樹木続編を書き終えた後に自分がなにを書くのか想像できませんが、きっと何かしら次の物語を見つけることになるのだろうなと信じています。
+
+<script async src="https://embed.bsky.app/static/embed.js" charset="utf-8"></script>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
