--- a/blog/2026/0131.md
+++ b/blog/2026/0131.md
@@ -82,9 +82,9 @@ Twitterで創作企画「[#novel首塚](https://x.com/bean_radish/status/1969340
 （深夜さんには過去に『すべての樹木は光』をオマージュした小説を[『首の夢』の一編](https://kakuyomu.jp/works/16817330666164694446/episodes/16817330666367537537)として寄せていただいております🌵）
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">風野湊さん(<a href="https://twitter.com/feelingskyblue?ref_src=twsrc%5Etfw">@feelingskyblue</a>)<br>『すべての樹木は光』<br><br>樹木変身譚を得意とする風野さんの幻想小説を受け、自分が同じ題材をとるとしたらどのようにという観点でこの話を考えました。『すべての～』で市場に降るスコールの場面が印象的で、どうにかあの雨を浴びたかったのです。<br><br>4「温室」 <a href="https://t.co/n4Ag8SO2Qe">pic.twitter.com/n4Ag8SO2Qe</a></p>&mdash; 深夜 (@bean_radish) <a href="https://twitter.com/bean_radish/status/1831691955379826938?ref_src=twsrc%5Etfw">September 5, 2024</a></blockquote>
 
-イベント翌日は、植物との関わりからコミュニケーションを思索するZINE『[フィトフィリア；α](https://hesperas.booth.pm/items/5365722)』など、人文系の評論やエッセイを書いていらっしゃる[田原夕さん](https://dismal-dusk.hatenablog.com/)にお声がけいただき、小説・漫画・ゲームにおけるファンタジーと魔法についてカフェで盛り上がったりしました（今後「ゼロ年代の魔法」をテーマにした評論を刊行予定とのこと）。
+イベント翌日は、植物との関わりからコミュニケーションを思索するZINE『[フィトフィリア；α](https://hesperas.booth.pm/items/5365722)』など、人文系の評論やエッセイを書いていらっしゃる[田原夕さん](https://dismal-dusk.hatenablog.com/)にお声がけいただき、小説・漫画・ゲームにおけるファンタジーと魔法描写の変遷についてカフェでお話ししたりしました（今後「ゼロ年代の魔法」をテーマにした評論を刊行予定とのこと）。
 
-日頃は人と話すの尻込みしがちな自分としてはかなり頑張った気がする！2026年！
+日頃は人と喋るの尻込みしがちな自分としてはかなり頑張った気がする！2026年！
 
 #### その他ゆるい雑談
 ##### 『うみねこのなく頃に』との再会
